--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
+/.classpath
+/.project
+/.springBeans
+/.settings/*
+*.DS_Store
+src/main/webapp/WEB-INF/spring/root-context.xml
+
