MockMvc테스트 추가

--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 		<dependency>
 		    <groupId>org.projectlombok</groupId>
 		    <artifactId>lombok</artifactId>
-		    <version>1.18.10</version>
+		    <version>1.18.8</version>
 		    <scope>provided</scope>
 		</dependency>
 
@@ -138,7 +138,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.15</version>
+			<version>1.2.17</version>
 			<exclusions>
 				<exclusion>
 					<groupId>javax.mail</groupId>
@@ -156,8 +156,8 @@
 					<groupId>com.sun.jmx</groupId>
 					<artifactId>jmxri</artifactId>
 				</exclusion>
-			</exclusions>
-			<scope>runtime</scope>
+			</exclusions> 
+			<!-- <scope>runtime</scope> -->
 		</dependency>
 
 		<!-- @Inject -->
